// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`whitout other scan 1`] = `
Registry {
  "registry": Map {
    "ServiceType" => Array [
      Object {
        "id": [Function],
        "target": [Function],
      },
      Object {
        "id": [Function],
        "target": [Function],
      },
    ],
    "ConfigType" => Array [
      Object {
        "id": [Function],
        "options": Object {
          "order": 150,
        },
        "target": [Function],
      },
    ],
  },
}
`;

exports[`whitout other scan 2`] = `
LoaderModule {
  "loadedFolder": Array [
    "<PROJECT_ROOT>/__tests__/fixtures/loader/withoutscan",
  ],
}
`;

exports[`with plugin 1`] = `
Registry {
  "registry": Map {
    "ServiceType" => Array [
      Object {
        "id": [Function],
        "target": [Function],
      },
      Object {
        "id": [Function],
        "target": [Function],
      },
      Object {
        "id": [Function],
        "target": [Function],
      },
      Object {
        "id": [Function],
        "target": [Function],
      },
      Object {
        "id": [Function],
        "target": [Function],
      },
    ],
    "ConfigType" => Array [
      Object {
        "id": [Function],
        "options": Object {
          "order": 150,
        },
        "target": [Function],
      },
      Object {
        "id": [Function],
        "options": Object {
          "order": 50,
        },
        "target": [Function],
      },
    ],
  },
}
`;

exports[`with plugin 2`] = `
LoaderModule {
  "loadedFolder": Array [
    "<PROJECT_ROOT>/__tests__/fixtures/loader/withoutscan",
    "<PROJECT_ROOT>/__tests__/fixtures/loader/withscan",
    "<PROJECT_ROOT>/__tests__/fixtures/loader/subfoldertoscan",
  ],
}
`;

exports[`with plugin and false scan path 1`] = `
Registry {
  "registry": Map {
    "ServiceType" => Array [
      Object {
        "id": [Function],
        "target": [Function],
      },
      Object {
        "id": [Function],
        "target": [Function],
      },
    ],
    "ConfigType" => Array [
      Object {
        "id": [Function],
        "options": Object {
          "order": 150,
        },
        "target": [Function],
      },
    ],
  },
}
`;

exports[`with plugin and false scan path 2`] = `
LoaderModule {
  "loadedFolder": Array [
    "<PROJECT_ROOT>/__tests__/fixtures/loader/withoutscan",
  ],
}
`;

exports[`with scan 1`] = `
Registry {
  "registry": Map {
    "ServiceType" => Array [
      Object {
        "id": [Function],
        "target": [Function],
      },
      Object {
        "id": [Function],
        "target": [Function],
      },
      Object {
        "id": [Function],
        "target": [Function],
      },
    ],
    "ConfigType" => Array [
      Object {
        "id": [Function],
        "options": Object {
          "order": 50,
        },
        "target": [Function],
      },
    ],
  },
}
`;

exports[`with scan 2`] = `
LoaderModule {
  "loadedFolder": Array [
    "<PROJECT_ROOT>/__tests__/fixtures/loader/withscan",
    "<PROJECT_ROOT>/__tests__/fixtures/loader/subfoldertoscan",
  ],
}
`;
